# canonical-indico-ngtimetable

./: .eslintrc.yaml  .gitignore  MANIFEST.in  README.md  babel.cfg  manage-i18n.sh  package-lock.json  package.json  setup.cfg  webpack-bundles.json
.github/: dependabot.yml
.github/workflows/: checkin.yml
indico_ngtimetable/: __init__.py  controllers.py  forms.py  plugin.py  serializer.py  views.py
indico_ngtimetable/client/: ngtimetable.js  ngtimetable.scss
indico_ngtimetable/templates/: ngtimetable.html  ngtimetable_settings.html
indico_ngtimetable/translations/: messages.pot
