[metadata]
name = indico-plugin-ngtimetable
version = 1.1.0
url = https://github.com/canonical/indico-plugin-ngtimetable
license = AGPLv3
author = Philipp Kewisch
author_email = philipp.kewisch@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11

[options.extras_require]
dev = tox==4.10.0

[options.entry_points]
indico.plugins =
    ngtimetable = indico_ngtimetable.plugin:NGTimetablePlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tox:tox]
envlist = py3

[isort]
profile = black

[testenv]
allowlist_externals = npx
deps =
  black
  isort
  flake8
commands =
  black indico_ngtimetable
  isort indico_ngtimetable
  flake8 indico_ngtimetable
  npx stylelint indico_ngtimetable/client/*.scss
  npx eslint indico_ngtimetable/client/*.js
